--- a/app/src/main/res/layout/phone_data_row.xml
+++ b/app/src/main/res/layout/phone_data_row.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+   android:id="@+id/cardViewContainer"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    card_view:strokeWidth="2dp"
     card_view:cardCornerRadius="8dp">
 
     <LinearLayout
@@ -37,4 +39,4 @@
 
 
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
