Done displaying selected valid combination  phone data in different screen

--- a/app/src/main/res/layout/main_phone_row.xml
+++ b/app/src/main/res/layout/main_phone_row.xml
@@ -11,7 +11,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+       >
     </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
